# Rust_HTMX_Gemini_AI

./: .gitignore  Cargo.toml
src/: main.rs
templates/: index.html  index2.html
